fix menu hover on dark mode

--- a/client/src/asset/css/header/dark-style.scss
+++ b/client/src/asset/css/header/dark-style.scss
@@ -4,16 +4,18 @@ body:not(.index)#dark {
     .menu {
         background-color: $components-background-color-dark;
         box-shadow: $components-box-shadow-dark;
+
+        li:hover{
+            &::after {
+                background-color: white;
+            }
+        }
+    
+        .sites > p {
+            color: white;
+        }
     }
 
-    .menu li:hover{
-        border-bottom: 3px solid rgb(255, 255, 255) !important;
-        transform: translateY(2.5px);
-    }
-
-    .menu .sites > p {
-        color: white;
-    }
 
     .logo {
         background-image: url(../../img/header/dark-theme/dark_portfolio_logo.png);
@@ -23,9 +25,10 @@ body:not(.index)#dark {
         background-image: url(../../img/header/light-mode.png);
         width: 40px;
         height: 40px;
+
+        &:hover {
+            background-image: url(../../img/header/light-mode-hover.png);
+        }
     }
 
-    .mode-button:hover {
-        background-image: url(../../img/header/light-mode-hover.png);
-    }
 }
