--- a/client/src/asset/css/header/style.scss
+++ b/client/src/asset/css/header/style.scss
@@ -44,14 +44,14 @@ body:not(.index) {
                     display: block;
                     width: 100%;
                     height: 0;
-                    animation: increaseBarHeight 0.2s forwards;
+                    animation: increaseBarHeight 0.2s forwards ease-out;
                     bottom: 0;
                     left: 0;
                     transform: translateY(100%);
                     $border-radius: 4px;
                     border-bottom-left-radius: $border-radius;
                     border-bottom-right-radius: $border-radius;
-                    background: $hover-color;
+                    background-color: $hover-color;
                     transition: height 0.2s;
                 }
     
